--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<mat-card class="card">
+    <mat-card-header>
+        <mat-card-title>Help Desk</mat-card-title>
+        <mat-card-subtitle>Dicas de um Dev</mat-card-subtitle>
+    </mat-card-header>
+
+    <img mat-card-lg-image src="assets/home-image.svg" alt="image home Help Desk">
+
+    <mat-card-content>
+        <p>
+            Olá! Seja bem vindo ao sistema Help Desk desenvolvido por mim no curso Desenvolvedor Full Stack.<br/>
+            Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk desenvolvido em Angular com Spring Boot 2.<br/>
+            O sistema está rodando na nuvem, sendo o front na Vercel e o back no Heroku.<br/>
+            O projeto tem como objetivo principal abordar os conceitos de aplicações SPAs, Autenticação e Autenticação com tokens JWT.<br/>
+            O código fonte do projeto pode ser acessado clicando no link Github no menu.<br/><br/>
+            Fique a vontade para testar o sistema e deixar sugestão.<br/>
+            Att., Valdir Cezar de Jesus  
+        </p>
+    </mat-card-content>
+
+</mat-card>
