HTML e CSS para o componente Home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
         <mat-card-subtitle>Dicas de um Dev</mat-card-subtitle>
     </mat-card-header>
 
-    <img mat-card-lg-image src="assets/home-image.svg" alt="image home Help Desk">
+    <img mat-card-image src="assets/img/home-image.svg" alt="image home Help Desk">
 
     <mat-card-content>
         <p>
