--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,11 +8,16 @@
 
     <mat-card-content>
         <p>
-            Olá! Seja bem vindo ao sistema Help Desk desenvolvido por mim no curso Desenvolvedor Full Stack.<br/>
-            Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk desenvolvido em Angular com Spring Boot 2.<br/>
-            O sistema está rodando na nuvem, sendo o front na Vercel e o back no Heroku.<br/>
-            O projeto tem como objetivo principal abordar os conceitos de aplicações SPAs, Autenticação e Autenticação com tokens JWT.<br/>
-            O código fonte do projeto pode ser acessado clicando no link Github no menu.<br/><br/>
+            Olá! Seja bem vindo ao sistema Help Desk desenvolvido por mim no curso Desenvolvedor Full Stack.
+            <br/><br/>
+            Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk desenvolvido em Angular com Spring Boot 2.
+            <br/><br/>
+            O sistema está rodando na nuvem, sendo o front na Vercel e o back no Heroku.
+            <br/><br/>
+            O projeto tem como objetivo principal abordar os conceitos de aplicações SPAs, Autenticação e Autenticação com tokens JWT.
+            <br/><br/>
+            O código fonte do projeto pode ser acessado clicando no link Github no menu.
+            <br/><br/>
             Fique a vontade para testar o sistema e deixar sugestão.<br/>
             Att., Valdir Cezar de Jesus  
         </p>
