Componente tecnicos e rota criados.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,7 +18,8 @@
             <br/><br/>
             O código fonte do projeto pode ser acessado clicando no link Github no menu.
             <br/><br/>
-            Fique a vontade para testar o sistema e deixar sugestão.<br/>
+            Fique a vontade para testar o sistema e deixar sugestão.
+            <br/><br/>
             Att., Valdir Cezar de Jesus  
         </p>
     </mat-card-content>
