--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -7,7 +7,7 @@
             Home
         </a>
         
-        <a mat-list-item routerLink="/">
+        <a mat-list-item routerLink="tecnicos">
             <i class="material-icons">account_circle</i>
             Técnicos
         </a>
