--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,8 +12,8 @@
       
         <mat-form-field class="full-width">
             <mat-label>Senha</mat-label>
-            <input [(ngModel)]="creds.senha" name="senha" type="password" 
-                matInput placeholder="Ex. Pizza">
+            <input [formControl]="senha" required [(ngModel)]="creds.senha" name="senha" 
+                type="password" matInput placeholder="Ex. Pizza">
         </mat-form-field>
 
         <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Login</button>
