--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,6 +16,6 @@
                 type="password" matInput placeholder="Ex. Pizza">
         </mat-form-field>
 
-        <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Login</button>
+        <button (click)="logar()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Login</button>
     </form>
 </div>
