--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,7 +22,7 @@
             Github
         </a>
 
-        <a mat-list-item routerLink="/">
+        <a mat-list-item (click)="logout()">
             <i class="material-icons">logout</i>
             Logout
         </a>
