--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.css
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.css
@@ -1,8 +1,23 @@
 .container {
     width: 90%;
-    margin: auto;
+    margin: 1rem auto;
 }
 
 table {
     width: 100%;
+}
+
+mat-form-field {
+    width: 100%;
+}
+
+button {
+    width: 100%;
+    margin-bottom: 0.5rem;
+}
+
+h1 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem;
 }
