--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -37,7 +37,15 @@
 
       <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
-        <td mat-cell *matCellDef="let element">Ações</td>
+        <td mat-cell *matCellDef="let element">
+          <a routerLink="">
+            <i class="material-icons edit">edit</i>
+          </a>
+
+          <a routerLink="">
+            <i class="material-icons delete">delete</i>
+          </a>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -45,7 +53,7 @@
     </table>
 
     <mat-paginator
-        [pageSizeOptions]="[2, 5, 10]" showFirstLastButtons
+        [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons
         aria-label="Select page of periodic elements">
     </mat-paginator>
   </div>
