--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -1,6 +1,6 @@
 <div class="container mat-elevation-z8">
     <form class="form">
-        <h1 class="fullWidth">Cadastro de Técnico</h1>
+        <h1 class="fullWidth">Cadastrar Técnico</h1>
         <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="Help Desk - Dicas de um Dev">
 
         <section class="section">
