--- a/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -1,6 +1,6 @@
 <div class="container mat-elevation-z8">
     <form class="form">
-        <h1 class="fullWidth">Atualização de Técnico</h1>
+        <h1 class="fullWidth">Atualizar Técnico</h1>
         <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="Help Desk - Dicas de um Dev">
 
         <section class="section">
@@ -11,29 +11,48 @@
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Nome:</mat-label>
-            <input [(ngModel)]="tecnico.nome" name="nome" [formControl]="nome" required 
-                    matInput placeholder="Ex.: Fulano de Tal" maxlength="50">
+            <input [(ngModel)]="tecnico.nome" 
+                    name="nome" 
+                    [formControl]="nome" 
+                    required 
+                    matInput 
+                    placeholder="Ex.: Fulano de Tal" 
+                    maxlength="50">
             <mat-icon matSuffix>person</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>CPF:</mat-label>
-            <input [(ngModel)]="tecnico.cpf" name="cpf" [formControl]="cpf" required 
-                    matInput placeholder="Ex.: 000.000.000-00" mask="000.000.000-00">
+            <input [(ngModel)]="tecnico.cpf" 
+                    name="cpf" 
+                    [formControl]="cpf" 
+                    required 
+                    matInput 
+                    placeholder="Ex.: 000.000.000-00" 
+                    mask="000.000.000-00">
             <mat-icon matSuffix>pin</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>E-mail:</mat-label>
-            <input [(ngModel)]="tecnico.email" name="email" [formControl]="email" required 
-                    matInput placeholder="Ex.: fulanodetal@mail.com">
+            <input [(ngModel)]="tecnico.email" 
+                    name="email" 
+                    [formControl]="email" 
+                    required 
+                    matInput 
+                    placeholder="Ex.: fulanodetal@mail.com">
             <mat-icon matSuffix>email</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Senha:</mat-label>
-            <input [(ngModel)]="tecnico.senha" name="senha" [formControl]="senha" required 
-                    type="password" matInput placeholder="Ex.: 1234">
+            <input [(ngModel)]="tecnico.senha" 
+                    name="senha" 
+                    [formControl]="senha" 
+                    required 
+                    type="password" 
+                    matInput 
+                    placeholder="Ex.: 1234">
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
