--- a/src/app/components/tecnico/tecnico-delete/tecnico-delete.component.html
+++ b/src/app/components/tecnico/tecnico-delete/tecnico-delete.component.html
@@ -41,7 +41,8 @@
             <input [(ngModel)]="tecnico.senha" 
                     name="senha" 
                     [disabled]="true" 
-                    matInput>
+                    matInput
+                    type="password">
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
