--- a/src/app/components/cliente/cliente-delete/cliente-delete.component.html
+++ b/src/app/components/cliente/cliente-delete/cliente-delete.component.html
@@ -1,6 +1,6 @@
 <div class="container mat-elevation-z8">
     <form class="form">
-        <h1 class="fullWidth">Deletar Técnico</h1>
+        <h1 class="fullWidth">Deletar Cliente</h1>
         <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="Help Desk - Dicas de um Dev">
 
         <section class="section">
@@ -11,7 +11,7 @@
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Nome:</mat-label>
-            <input [(ngModel)]="tecnico.nome" 
+            <input [(ngModel)]="cliente.nome" 
                     name="nome"
                     [disabled]="true" 
                     matInput>
@@ -20,7 +20,7 @@
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>CPF:</mat-label>
-            <input [(ngModel)]="tecnico.cpf" 
+            <input [(ngModel)]="cliente.cpf" 
                     name="cpf" 
                     [disabled]="true" 
                     matInput>
@@ -29,7 +29,7 @@
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>E-mail:</mat-label>
-            <input [(ngModel)]="tecnico.email" 
+            <input [(ngModel)]="cliente.email" 
                     name="email" 
                     [disabled]="true" 
                     matInput>
@@ -38,7 +38,7 @@
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Senha:</mat-label>
-            <input [(ngModel)]="tecnico.senha" 
+            <input [(ngModel)]="cliente.senha" 
                     name="senha" 
                     [disabled]="true" 
                     matInput
