Rota para componente chamado-create criada.

--- a/src/app/components/chamado/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamado/chamado-list/chamado-list.component.html
@@ -1,18 +1,13 @@
 <div class="container">
   <h1>Lista de Chamados</h1>
 
-  <button class="mat-elevation-z8" mat-stroked-button color="primary">
+  <button routerLink="create" class="mat-elevation-z8" mat-stroked-button color="primary">
     Novo chamado
   </button>
 
   <mat-form-field appearance="standard">
     <mat-label>Filtro:</mat-label>
-    <input
-      matInput
-      (keyup)="applyFilter($event)"
-      placeholder="Ex. 1un"
-      #input
-    />
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. 1un" #input/>
   </mat-form-field>
 
   <mat-radio-group color="primary">
