--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -5,15 +5,15 @@
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Título do Chamado</mat-label>
-            <input [formControl]="titulo" required matInput 
-                    placeholder="Ex. Trocar bateria de notebook">
+            <input  [(ngModel)]="chamado.titulo" name="titulo" [formControl]="titulo" required 
+                    matInput placeholder="Ex. Trocar bateria de notebook">
         </mat-form-field>
     </form>
 
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
             <mat-label>Selecione um status</mat-label>
-            <mat-select [formControl]="status" required>
+            <mat-select [(ngModel)]="chamado.status" name="status" [formControl]="status" required>
                 <mat-option value="0">ABERTO</mat-option>
                 <mat-option value="1">EM ANDAMENTO</mat-option>
                 <mat-option value="2">ENCERRADO</mat-option>
@@ -22,7 +22,7 @@
 
         <mat-form-field appearance="outline">
             <mat-label>Selecione uma prioridade</mat-label>
-            <mat-select [formControl]="prioridade" required>
+            <mat-select [(ngModel)]="chamado.prioridade" name="prioridade" [formControl]="prioridade" required>
                 <mat-option value="0">BAIXA</mat-option>
                 <mat-option value="1">MÉDIA</mat-option>
                 <mat-option value="2">ALTA</mat-option>
@@ -33,8 +33,8 @@
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um técnico</mat-label>
-            <mat-select [formControl]="tecnico" required>
-                <mat-option value="0">Valdir</mat-option>
+            <mat-select [(ngModel)]="chamado.tecnico" name="tecnico" [formControl]="tecnico" required>
+                <mat-option *ngFor="let tecnico of tecnicos" value="{{ tecnico.id }}">{{ tecnico.nome }}</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
@@ -42,8 +42,8 @@
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um cliente</mat-label>
-            <mat-select [formControl]="cliente" required>
-                <mat-option value="0">Albert Einstein</mat-option>
+            <mat-select [(ngModel)]="chamado.cliente" name="cliente" [formControl]="cliente" required>
+                <mat-option *ngFor="let cliente of clientes" value="{{ cliente.id }}">{{ cliente.nome }}</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
@@ -51,12 +51,12 @@
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Deixe uma descrição</mat-label>
-            <textarea [formControl]="descricao" required class="descricao" matInput 
+            <textarea [(ngModel)]="chamado.observacoes" name="observacoes" [formControl]="observacoes" required class="descricao" matInput 
                         placeholder="Ex. Trocar bateria de notebook queimada."></textarea>
         </mat-form-field>
     </form>
 
-    <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Cadastrar</button>
+    <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Cadastrar</button>
     <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     <p class="full-width">Desenvolvido por Valdir Cezar</p>
