--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -12,7 +12,7 @@
 
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
-            <mat-label>Selecione um status</mat-label>
+            <mat-label>{{ retornaStatus(chamado.status) }}</mat-label>
             <mat-select [(ngModel)]="chamado.status" name="status" [formControl]="status" required>
                 <mat-option value="0">ABERTO</mat-option>
                 <mat-option value="1">EM ANDAMENTO</mat-option>
@@ -21,7 +21,7 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-            <mat-label>Selecione uma prioridade</mat-label>
+            <mat-label>{{ retornaPrioridade(chamado.prioridade) }}</mat-label>
             <mat-select [(ngModel)]="chamado.prioridade" name="prioridade" [formControl]="prioridade" required>
                 <mat-option value="0">BAIXA</mat-option>
                 <mat-option value="1">MÉDIA</mat-option>
@@ -32,7 +32,7 @@
 
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Selecione um técnico</mat-label>
+            <mat-label>{{ chamado.nomeTecnico }}</mat-label>
             <mat-select [(ngModel)]="chamado.tecnico" name="tecnico" [formControl]="tecnico" required>
                 <mat-option *ngFor="let tecnico of tecnicos" value="{{ tecnico.id }}">{{ tecnico.nome }}</mat-option>
             </mat-select>
@@ -41,7 +41,7 @@
 
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Selecione um cliente</mat-label>
+            <mat-label>{{ chamado.nomeCliente }}</mat-label>
             <mat-select [(ngModel)]="chamado.cliente" name="cliente" [formControl]="cliente" required>
                 <mat-option *ngFor="let cliente of clientes" value="{{ cliente.id }}">{{ cliente.nome }}</mat-option>
             </mat-select>
@@ -56,7 +56,7 @@
         </mat-form-field>
     </form>
 
-    <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Atualizar</button>
+    <button (click)="update()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Atualizar</button>
     <button routerLink="../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     <p class="full-width">Desenvolvido por Valdir Cezar</p>
