--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -57,7 +57,7 @@
     </form>
 
     <button (click)="update()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Atualizar</button>
-    <button routerLink="../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+    <button routerLink="../../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     <p class="full-width">Desenvolvido por Valdir Cezar</p>
 </div>
