--- a/src/app/components/chamado/chamado-read/chamado-read.component.html
+++ b/src/app/components/chamado/chamado-read/chamado-read.component.html
@@ -1,1 +1,56 @@
-<p>chamado-read works!</p>
+<div class="container mat-elevation-z8">
+    <h1 class="full-width">Visualizar Chamado</h1>
+    <img class="full-width" src="assets/img/chamado-create.svg" alt="Help Desk - Dicas de um Dev">
+
+    <form class="form">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Título do Chamado</mat-label>
+            <input  [(ngModel)]="chamado.titulo" name="titulo" matInput [disabled]="true">
+        </mat-form-field>
+    </form>
+
+    <div class="status-prioridade">
+        <mat-form-field appearance="outline">
+            <mat-label>Status: {{ retornaStatus(chamado.status) }}</mat-label>
+            <mat-select [(ngModel)]="chamado.status" name="status" [disabled]="true">
+                <mat-option value="0">Aberto</mat-option>
+                <mat-option value="1">Em Andamento</mat-option>
+                <mat-option value="2">Encerrado</mat-option>
+            </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Prioridade: {{ retornaPrioridade(chamado.prioridade) }}</mat-label>
+            <mat-select [(ngModel)]="chamado.prioridade" name="prioridade" [disabled]="true">
+                <mat-option value="0">Baixa</mat-option>
+                <mat-option value="1">Média</mat-option>
+                <mat-option value="2">Alta</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+
+    <div class="tecnico">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Técnico</mat-label>
+            <input  [(ngModel)]="chamado.nomeTecnico" name="tecnico" matInput [disabled]="true">
+        </mat-form-field>
+    </div>
+
+    <div class="cliente">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Cliente</mat-label>
+            <input  [(ngModel)]="chamado.nomeCliente" name="cliente" matInput [disabled]="true">
+        </mat-form-field>
+    </div>
+
+    <form class="form">
+        <mat-form-field class="full-width" appearance="outline">
+            <mat-label>Deixe uma descrição</mat-label>
+            <textarea [(ngModel)]="chamado.observacoes" name="observacoes" class="descricao" matInput [disabled]="true"></textarea>
+        </mat-form-field>
+    </form>
+
+    <button routerLink="../../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Retornar</button>
+
+    <p class="full-width">Desenvolvido por Valdir Cezar</p>
+</div>
