--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -12,27 +12,27 @@
 
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
-            <mat-label>{{ retornaStatus(chamado.status) }}</mat-label>
+            <mat-label>Status: {{ retornaStatus(chamado.status) }}</mat-label>
             <mat-select [(ngModel)]="chamado.status" name="status" [formControl]="status" required>
-                <mat-option value="0">ABERTO</mat-option>
-                <mat-option value="1">EM ANDAMENTO</mat-option>
-                <mat-option value="2">ENCERRADO</mat-option>
+                <mat-option value="0">Aberto</mat-option>
+                <mat-option value="1">Em Andamento</mat-option>
+                <mat-option value="2">Encerrado</mat-option>
             </mat-select>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-            <mat-label>{{ retornaPrioridade(chamado.prioridade) }}</mat-label>
+            <mat-label>Prioridade: {{ retornaPrioridade(chamado.prioridade) }}</mat-label>
             <mat-select [(ngModel)]="chamado.prioridade" name="prioridade" [formControl]="prioridade" required>
-                <mat-option value="0">BAIXA</mat-option>
-                <mat-option value="1">MÉDIA</mat-option>
-                <mat-option value="2">ALTA</mat-option>
+                <mat-option value="0">Baixa</mat-option>
+                <mat-option value="1">Média</mat-option>
+                <mat-option value="2">Alta</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
 
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>{{ chamado.nomeTecnico }}</mat-label>
+            <mat-label>Técnico: {{ chamado.nomeTecnico }}</mat-label>
             <mat-select [(ngModel)]="chamado.tecnico" name="tecnico" [formControl]="tecnico" required>
                 <mat-option *ngFor="let tecnico of tecnicos" value="{{ tecnico.id }}">{{ tecnico.nome }}</mat-option>
             </mat-select>
@@ -41,7 +41,7 @@
 
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>{{ chamado.nomeCliente }}</mat-label>
+            <mat-label>Cliente: {{ chamado.nomeCliente }}</mat-label>
             <mat-select [(ngModel)]="chamado.cliente" name="cliente" [formControl]="cliente" required>
                 <mat-option *ngFor="let cliente of clientes" value="{{ cliente.id }}">{{ cliente.nome }}</mat-option>
             </mat-select>
