--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,7 +22,7 @@
           Chamados
       </a>
 
-        <a mat-list-item routerLink="/">
+        <a mat-list-item href="https://github.com/renatobarata/helpdesk-frontend" target="_blank">
             <i class="material-icons">code</i>
             Github
         </a>
